--- a/templates/datarobot-node.template.yaml
+++ b/templates/datarobot-node.template.yaml
@@ -484,8 +484,8 @@ Resources:
                   # flag URL that AMI is complete
                   curl -X PUT -H 'Content-Type:' --data-binary '{"Status" : "SUCCESS","Reason" : "Configuration Complete","UniqueId" : "IDAMIDONE","Data" : "AMI Complete"}' "$AMI_SIGNAL"
 
-                  # shutdown this instance in 2 hours - let scaling group take over
-                  sudo /usr/sbin/shutdown +120
+                  # shutdown this instance in 15 minutes - let scaling group build complete and take over
+                  sudo /usr/sbin/shutdown +15
  
                 else
                   echo "Skipping nodes other than ModelingOnly"
