--- a/templates/datarobot-new-vpc-entry.template.yaml
+++ b/templates/datarobot-new-vpc-entry.template.yaml
@@ -166,7 +166,7 @@ Parameters:
     Description: Choose True if you did not already create a bucket and want it to be created by the quickstart
     Type: String
   DRSignedURL:
-    Default: "https://datarobot-enterprise-releases.s3.amazonaws.com/promoted/7.1.0/dockerized/DataRobot-RELEASE-7.1.0.tar.gz?AWSAccessKeyId=AKIAQ6I23A22NIXIMKVW&Expires=1624388349&Signature=jPylx228j%2FYS3kbtmjAt0f00dTs%3D"
+    Default: "Get URL From DataRobot Request Form"
     Type: String
     Description: Presigned URL to download software, must be sent by DataRobot
   DRLbCidr:
