--- a/templates/datarobot-existing-vpc.template.yaml
+++ b/templates/datarobot-existing-vpc.template.yaml
@@ -128,7 +128,7 @@ Parameters:
   DRS3InstallationBucket:
     Default: dr-temp-wesqs12345
     Description:
-      Name of the S3 bucket you want to install DataRobot into. It should not be public
+      Name of the S3 bucket you want to use for uploaded data and to store configuration. It should not be public
       and the account you are running the quickstart will need the ability to assign
       permissions for access to a role for EC2 instances.
     Type: String
@@ -152,7 +152,6 @@ Parameters:
   DRLbCidr:
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]{1}|[1-2][0-8]{2}))$
     ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/0-28
-    Default: '0.0.0.0/0'
     Description: CIDR block to allow access to front end application and prediction services
     Type: String
   QSS3BucketName:
@@ -314,9 +313,6 @@ Resources:
         Region: !Ref "AWS::Region"
         MainStack: !Ref AWS::StackName
         SubnetId: !Ref PrivateSubnet1ID
-        LBPublicSubnet1ID: !Ref PublicSubnet1ID
-        LBPublicSubnet2ID: !Ref PublicSubnet2ID
-        LBVPCID: !Ref VPCID
         Encrypted: true
         EncryptionKey: ' '
         SSHKey: !Ref KeyPairName
