--- a/templates/datarobot-existing-vpc.template.yaml
+++ b/templates/datarobot-existing-vpc.template.yaml
@@ -23,6 +23,7 @@ Metadata:
           default: Network / Install Configurations
         Parameters:
           - VPCID
+          - VPCCIDR
           - PrivateSubnet1ID
           - PrivateSubnet2ID
           - PublicSubnet1ID
@@ -78,6 +79,8 @@ Metadata:
         default: Should Quickstart Create the bucket (select false if it already exists)
       VPCID:
         default: VPC ID  
+      VPCCIDR:
+        default: VPC CIDR
       QSS3BucketName:
         default: Quick Start S3 bucket name
       QSS3KeyPrefix:
@@ -102,6 +105,11 @@ Parameters:
   VPCID:
     Type: "AWS::EC2::VPC::Id"
     Description: ID of your existing VPC (e.g., vpc-0343606e).
+  VPCCIDR:
+    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
+    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
+    Description: CIDR block for the VPC.
+    Type: String
   KeyPairName:
     Description: Name of an existing public/private key pair. If you do not have one in this AWS Region,
       please create it before continuing.
@@ -126,7 +134,7 @@ Parameters:
     Type: String
     Default: ''
   DRS3InstallationBucket:
-    Default: dr-temp-wesqs12345
+    Default: ''
     Description:
       Name of the S3 bucket you want to use for uploaded data and to store configuration. It should not be public
       and the account you are running the quickstart will need the ability to assign
@@ -146,7 +154,6 @@ Parameters:
     #Default: 7.0.2
     Default: 7.1.1
   DRSignedURL:
-    Default: "https://datarobot-enterprise-releases.s3.amazonaws.com/promoted/7.1.1/dockerized/DataRobot-RELEASE-7.1.1.tar.gz?AWSAccessKeyId=AKIAQ6I23A22NIXIMKVW&Expires=1625496444&Signature=zdAEaUbsfxw0HPKfbA5N%2BoMaUgo%3D"
     Type: String
     Description: Presigned URL to download software, must be sent by DataRobot
   DRLbCidr:
@@ -270,7 +277,7 @@ Resources:
     Condition: CreateS3BucketCondition
     Properties:
       AccessControl: Private
-      BucketName: !Ref DRS3InstallationBucket
+      # BucketName: !Ref DRS3InstallationBucket
 
   SecurityStack:
     Type: AWS::CloudFormation::Stack
@@ -283,8 +290,8 @@ Resources:
       Parameters:
         MainStack: !Ref AWS::StackName
         VpcId: !Ref VPCID
-        CidrBlock: 0.0.0.0/0
-
+        # CidrBlock: 0.0.0.0/0
+        CidrBlock: !Ref VPCCIDR
 
   IAMStack:
     Type: AWS::CloudFormation::Stack
@@ -296,9 +303,9 @@ Resources:
           S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         MainStack: !Ref AWS::StackName
-        S3Bucket: !Ref DRS3InstallationBucket
+        # S3Bucket: !Ref DRS3InstallationBucket
+        S3Bucket: !If [CreateS3BucketCondition, !Ref 'S3Bucket', !Ref DRS3InstallationBucket]
         
-
   AppNode:
     Type: AWS::CloudFormation::Stack
     DependsOn: AppPasswd
@@ -317,7 +324,8 @@ Resources:
         EncryptionKey: ' '
         SSHKey: !Ref KeyPairName
         QSInstallationBucket: !Ref QSS3BucketName
-        DRInstallationBucket: !Ref DRS3InstallationBucket
+        # DRInstallationBucket: !Ref DRS3InstallationBucket
+        DRInstallationBucket: !If [CreateS3BucketCondition, !Ref 'S3Bucket', !Ref DRS3InstallationBucket]
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
         DownloadURL: !Ref DRSignedURL
         EC2InstanceSecurityProfile: !GetAtt 'IAMStack.Outputs.EC2InstanceSecurityProfile'
@@ -360,7 +368,8 @@ Resources:
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
-        InstallationBucket: !Ref DRS3InstallationBucket
+        # InstallationBucket: !Ref DRS3InstallationBucket
+        InstallationBucket: !If [CreateS3BucketCondition, !Ref 'S3Bucket', !Ref DRS3InstallationBucket]
         InstanceType: r5.xlarge
         MainStack: !Ref AWS::StackName
         ServerName: DedicatedPredictionServer1
@@ -400,7 +409,8 @@ Resources:
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
-        InstallationBucket: !Ref DRS3InstallationBucket
+        # InstallationBucket: !Ref DRS3InstallationBucket
+        InstallationBucket: !If [CreateS3BucketCondition, !Ref 'S3Bucket', !Ref DRS3InstallationBucket]
         InstanceType: r5.xlarge
         MainStack: !Ref AWS::StackName
         ServerName: DedicatedPredictionServer2
@@ -441,7 +451,8 @@ Resources:
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
-        InstallationBucket: !Ref DRS3InstallationBucket
+        # InstallationBucket: !Ref DRS3InstallationBucket
+        InstallationBucket: !If [CreateS3BucketCondition, !Ref 'S3Bucket', !Ref DRS3InstallationBucket]
         InstanceType: r5.2xlarge
         MainStack: !Ref AWS::StackName
         ServerName: ModelingNode1
@@ -482,7 +493,8 @@ Resources:
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
-        InstallationBucket: !Ref DRS3InstallationBucket
+        # InstallationBucket: !Ref DRS3InstallationBucket
+        InstallationBucket: !If [CreateS3BucketCondition, !Ref 'S3Bucket', !Ref DRS3InstallationBucket]
         InstanceType: r5.2xlarge
         MainStack: !Ref AWS::StackName
         ServerName: ModelingNode2
@@ -524,7 +536,8 @@ Resources:
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
-        InstallationBucket: !Ref DRS3InstallationBucket
+        # InstallationBucket: !Ref DRS3InstallationBucket
+        InstallationBucket: !If [CreateS3BucketCondition, !Ref 'S3Bucket', !Ref DRS3InstallationBucket]
         InstanceType: r5.2xlarge
         MainStack: !Ref AWS::StackName
         ServerName: ModelingOnly
@@ -566,7 +579,8 @@ Resources:
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
-        InstallationBucket: !Ref DRS3InstallationBucket
+        # InstallationBucket: !Ref DRS3InstallationBucket
+        InstallationBucket: !If [CreateS3BucketCondition, !Ref 'S3Bucket', !Ref DRS3InstallationBucket]
         InstanceType: c5.xlarge
         MainStack: !Ref AWS::StackName
         ServerName: DataNode1
@@ -606,7 +620,8 @@ Resources:
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
-        InstallationBucket: !Ref DRS3InstallationBucket
+        # InstallationBucket: !Ref DRS3InstallationBucket
+        InstallationBucket: !If [CreateS3BucketCondition, !Ref 'S3Bucket', !Ref DRS3InstallationBucket]
         InstanceType: c5.xlarge
         MainStack: !Ref AWS::StackName
         ServerName: DataNode2
@@ -646,7 +661,8 @@ Resources:
       Parameters:
         Region: !Ref "AWS::Region"
         ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Centos]
-        InstallationBucket: !Ref DRS3InstallationBucket
+        # InstallationBucket: !Ref DRS3InstallationBucket
+        InstallationBucket: !If [CreateS3BucketCondition, !Ref 'S3Bucket', !Ref DRS3InstallationBucket]
         InstanceType: c5.xlarge
         MainStack: !Ref AWS::StackName
         ServerName: DataNode3
