--- a/templates/datarobot-new-vpc-entry.template.yaml
+++ b/templates/datarobot-new-vpc-entry.template.yaml
@@ -152,7 +152,7 @@ Parameters:
     Type: String
     Default: ''
   DRS3InstallationBucket:
-    Default: dr-temp-wesqs12345
+    Default: ''
     Description:
       Name of the S3 bucket you want to use for uploaded data and to store configuration. It should not be public
       and the account you are running the quickstart will need the ability to assign
@@ -246,11 +246,10 @@ Resources:
   VPCStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: https://aws-quickstart.s3.amazonaws.com/quickstart-aws-vpc/templates/aws-vpc.template.yaml
-      #TemplateURL: !Sub
-      #  - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/quickstart-aws-vpc/templates/aws-vpc.template.yaml'
-      #  - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
-      #    S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+      TemplateURL: !Sub
+       - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}submodules/quickstart-aws-vpc/templates/aws-vpc.template.yaml'
+       - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+         S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         AvailabilityZones:
           Fn::Join:
@@ -270,17 +269,16 @@ Resources:
   BastionStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: https://aws-quickstart.s3.amazonaws.com/quickstart-linux-bastion/templates/linux-bastion.template
-      #TemplateURL: !Sub
-      #  - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/quickstart-linux-bastion/templates/linux-bastion.template'
-      #  - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
-      #    S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+      TemplateURL: !Sub
+       - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}submodules/quickstart-linux-bastion/templates/linux-bastion.template'
+       - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+         S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         QSS3BucketName: 
           Ref: QSS3BucketName
         QSS3BucketRegion: 
           Ref: QSS3BucketRegion
-        QSS3KeyPrefix: 'quickstart-linux-bastion/'
+        QSS3KeyPrefix: !Sub "${QSS3KeyPrefix}submodules/quickstart-linux-bastion/"
         BastionAMIOS:
           Ref: BastionAMIOS
         BastionHostName: 'DRBastion'
@@ -306,11 +304,10 @@ Resources:
   DataRobotStack:
     Type: AWS::CloudFormation::Stack
     Properties: 
-      TemplateURL: https://dr-temp-wesquickstart-code.s3.amazonaws.com/quickstart-data-robot-automl-platform/templates/datarobot-existing-vpc.template.yaml
-      #TemplateURL: !Sub
-      #  - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}submodules/quickstart-linux-bastion/templates/datarobot-main-template.yaml'
-      #  - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
-      #    S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+      TemplateURL: !Sub
+       - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/datarobot-existing-vpc.template.yaml'
+       - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
+         S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
         KeyPairName:
           Ref: KeyPairName
@@ -346,13 +343,17 @@ Resources:
           Ref: DRSignedURL
         DRLbCidr:
           Ref: DRLbCidr
-        QSS3BucketName: 'weswagner-quickstart-dr'
-          # Ref: QSS3BucketName
-        QSS3BucketRegion: 'us-east-1'
-          # Ref: QSS3BucketRegion
-        QSS3KeyPrefix: 'quickstart-data-robot-automl-platform/'
-          # Ref: QSS3KeyPrefix
+        QSS3BucketName: 
+          Ref: QSS3BucketName
+        QSS3BucketRegion: 
+          Ref: QSS3BucketRegion
+        QSS3KeyPrefix: 
+          Ref: QSS3KeyPrefix
         VPCID:
           Fn::GetAtt:
           - VPCStack
           - Outputs.VPCID
+        VPCCIDR:
+          Fn::GetAtt:
+          - VPCStack
+          - Outputs.VPCCIDR
