--- a/templates/datarobot-iam.template.yaml
+++ b/templates/datarobot-iam.template.yaml
@@ -26,7 +26,9 @@ Parameters:
   S3Bucket:
     Type: String
     Description: Datarobot bucket for storage
-  
+  QSS3BucketName:
+    Type: String
+    Description: Name of the S3 bucket for your copy of the Quick Start assets.
 
 Resources: 
   DataRobotIAMRole:
@@ -123,8 +125,8 @@ Resources:
               - !Sub 'arn:${AWS::Partition}:ssm:*:*:parameter/drami'
               - !Sub 'arn:${AWS::Partition}:s3:::${S3Bucket}'
               - !Sub 'arn:${AWS::Partition}:s3:::${S3Bucket}/*'
-              - !Sub 'arn:${AWS::Partition}:s3:::dr-temp-wesquickstart-code'
-              - !Sub 'arn:${AWS::Partition}:s3:::dr-temp-wesquickstart-code/*'
+              - !Sub 'arn:${AWS::Partition}:s3:::${QSS3BucketName}'
+              - !Sub 'arn:${AWS::Partition}:s3:::${QSS3BucketName}/*'
            
           - Effect: Allow
             Action:
