--- a/templates/datarobot-existing-vpc.template.yaml
+++ b/templates/datarobot-existing-vpc.template.yaml
@@ -6,17 +6,10 @@
 ###########################################################################
 
 AWSTemplateFormatVersion: "2010-09-09"
-Description: DataRobot CloudFormation stack to create the EC2 instances for the cluster. (qs-1xxxxxxxx) 
+Description: Deploy DataRobot into an existing VPC. (qs-1s36qjm1l) 
 Metadata:
-  QuickStartDocumentation:
-    EntrypointName: Launch into an existing VPC
-    Order: "5"
   QSLint:
     Exclusions: [ W9002, W9003, W9006 ]
-  #cfn-lint:
-    #config:
-      #ignore_checks:
-      #  - E9101
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
