--- a/templates/datarobot-appnode.template.yaml
+++ b/templates/datarobot-appnode.template.yaml
@@ -6,11 +6,8 @@
 ###########################################################################
 
 AWSTemplateFormatVersion: "2010-09-09"
-Description: DataRobot CloudFormation stack to create the EC2 instances for the cluster. (qs-1xxxxxxxx)
+Description: DCreate the EC2 instances for the application node. (qs-1s36qjm4c)
 Metadata:
-  QuickStartDocumentation:
-    EntrypointName: Launch into an existing VPC
-    Order: "5"
   QSLint:
     Exclusions: [ W9002, W9003 ]
   cfn-lint:
@@ -21,115 +18,114 @@ Metadata:
 
 Parameters:
   EC2InstanceSecurityProfile:
-    Description: EC2 Security Profile to use for assumed role
+    Description: EC2 Security Profile to use for assumed role.
     Type: String
   EC2SecurityGroup:
     Type: 'AWS::EC2::SecurityGroup::Id'
-    Description: EC2 Security Group for EC2 Instance
+    Description: EC2 Security Group for EC2 Instance.
   MainStack:
     Type: String
-    Description: Name of Parent Stack
+    Description: Name of Parent Stack.
   DRVersion:
     Type: String
-    Description: DataRobot version to install
+    Description: DataRobot version to install.
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})'
-    #Default: 7.0.2
     Default: '7.1.1'
   QSInstallationBucket:
     Type: String
-    Description: CloudFormation quickstart repository S3 bucket name
+    Description: CloudFormation quickstart repository S3 bucket name.
   DRInstallationBucket:
     Type: String
-    Description: DataRobot Installation Directory for Application Data
+    Description: DataRobot Installation Directory for Application Data.
   DRHTTPSetting:
     AllowedValues:
       - 'HTTPS'
       - 'HTTP'
     Default: 'HTTPS'
-    Description: Select HTTPS for secured access with certificate, or (not recommended) http for insecure port 80 access
+    Description: Select HTTPS for secured access with certificate, or (not recommended) http for insecure port 80 access.
     Type: String 
   SSHKey:
     Type: "AWS::EC2::KeyPair::KeyName"
-    Description: Key pair to use for connectivity
+    Description: Key pair to use for connectivity.
   SubnetId:
     Type: "AWS::EC2::Subnet::Id"
-    Description: Subnet for cluster
+    Description: Subnet for cluster.
   ImageId:
     Type: AWS::EC2::Image::Id
-    Description: RHEL or CentOS AMI Id
+    Description: RHEL or CentOS AMI Id.
   InstanceType:
     Type: String
-    Description: AWS Instance Type
+    Description: AWS Instance Type.
     AllowedValues: [ "t3.2xlarge", "m5.xlarge", "m5.2xlarge", "c5.xlarge", "c5.2xlarge", "r5.xlarge", "r5.2xlarge", "r5.4xlarge", "r5d.12xlarge", "r5.large" ]
     Default: r5.2xlarge
   NodeVolumeSize:
     Type: Number
-    Description: Hard drive size for Operating System
+    Description: Hard drive size for Operating System.
     AllowedValues: [ 40, 60, 80, 100 ]
     Default: 60
   DataVolumeSize:
     Type: Number
-    Description: Hard drive size for the DataRobot software
+    Description: Hard drive size for the DataRobot software.
     AllowedValues: [ 128, 200, 256, 512, 1024, 2048, 4096 ]
     Default: 200
   Region:
     Type: String
-    Description: Region to host cluster
+    Description: Region to host cluster.
     AllowedValues: [ "ap-south-1", "eu-west-1", "eu-west-2", "eu-west-3", "eu-north-1", "ap-northeast-1", "ap-northeast-2", "sa-east-1", "ca-central-1", "ap-southeast-1", "ap-southeast-2", "eu-central-1", "us-east-1", "us-east-2", "us-west-1", "us-west-2" ]
     Default: us-east-1
   Encrypted:
     Type: String
-    Description: Enable encryption on the DataRobot Application Drive
+    Description: Enable encryption on the DataRobot Application Drive.
     Default: false
     AllowedValues: [ true, false ]
   EncryptionKey:
     Type: String
-    Description: AWS KMS key used to encrypt the DataRobot App drive at /opt/datarobot
+    Description: AWS KMS key used to encrypt the DataRobot App drive at /opt/datarobot.
   SecretsEnforced:
     Type: String
-    Description: Enable secrets and passwords for Mongo and Gluster?
+    Description: Enable secrets and passwords for Mongo and Gluster.
     Default: true
     AllowedValues: [ true, false ]
   PublicIpAddress:
     Type: String
-    Description: Should this node have a Public IP
+    Description: Should this node have a Public IP.
     Default: false
     AllowedValues: [ true, false ]
   StorageDir:
     Type: String
-    Description: Where to store the verte4x files in our S3 bucket
+    Description: Where to store the verte4x files in our S3 bucket.
     Default: "datarobot_storage"
   BackupDir:
     Type: String
-    Description: Where to store the secrets and data file backups
+    Description: Where to store the secrets and data file backups.
     Default: "backup_files"
   UseS3BucketBackups:
     Type: String
-    Description: Where to store the secrets and data file backups
+    Description: Where to store the secrets and data file backups.
     Default: true
     AllowedValues: [ true, false ]
   S3BucketBackupSchedule:
     Type: String
-    Description: "Cron tab formatted schedule. Default: '0 0 * * 1-5' or Monday - Friday at midnight"
+    Description: "Cron tab formatted schedule. Default: '0 0 * * 1-5' or Monday - Friday at midnight."
     Default: "0 0 * * 1-5"
     # Default: "30 * * * *"
   DownloadURL:
     Type: String
-    Description: Link to the time expiring DataRobot installation archive
+    Description: Link to the time expiring DataRobot installation archive.
   AppName:
     Type: String
-    Description: DNS Name of the app LB or Domain Name
+    Description: DNS Name of the app LB or Domain Name.
   PredName:
     Type: String
-    Description: DNS Name of the prediction LB or Domain Name
+    Description: DNS Name of the prediction LB or Domain Name.
   ClusterType:
     Type: String
     Description: Type of cluster to build.
     Default: "QuickStart" 
   UseAutoScaling:
     Type: String
-    Description: Enable the metricspublisher service to turn on AutoScaling
-    Default: "true" 
+    Description: Enable the metricspublisher service to turn on AutoScaling.
+    Default: true 
     AllowedValues: [ true, false ]
   StorageType:
     Type: String
@@ -138,7 +134,7 @@ Parameters:
     Default: s3bucket
   MetricNamespace:
     Type: String
-    Description: CloudWatch AutoScaling Metric Namespace
+    Description: CloudWatch AutoScaling Metric Namespace.
     Default: "DataRobot/AutoScaling/Quickstart"
   AdminPassword:
     Type: String
