--- a/templates/datarobot-new-vpc-entry.template.yaml
+++ b/templates/datarobot-new-vpc-entry.template.yaml
@@ -6,16 +6,8 @@
 ###########################################################################
 
 AWSTemplateFormatVersion: "2010-09-09"
-Description: This master template creates a VPC infrastructure for a 2-AZ, multi-tier
-  deployment of a workload on AWS. It deploys a VPC with bastions and a workload cluster
-  behind ELBs and autoscaling groups. The cluster is configured to use an S3 bucket for 
-  storage  **WARNING** This template creates EC2 instances and related resources. You 
-  will be billed for the AWS resources used if you create a stack from this template.
-  (qs-1xxxxxxxx)
+Description: Deploy DataRobot into a new VPC (qs-1s36qjm45).
 Metadata:
-  QuickStartDocumentation:
-    EntrypointName: Launch into an existing VPC
-    Order: "5"
   QSLint:
     Exclusions: [ W9002, W9003, W9006 ]
   cfn-lint:
