Explicit path required in crontab for aws utility
Fixes issues with automatic backup data for servers.

--- a/templates/datarobot-appnode.template.yaml
+++ b/templates/datarobot-appnode.template.yaml
@@ -618,7 +618,7 @@ Resources:
                   echo "Skipping Modeling nodes"
                 else
                   echo 'Adding ($SCHEDULE) cronjob syncing /opt/datarobot/data to s3://$S3_BUCKET/$BACKUP_DIR/data/$my_name'                  
-                  printf '%s docker stop $(docker ps -aq) && aws s3 sync --no-progress /opt/datarobot/data s3://%s/%s/data/%s && docker start $(docker ps -aq)\n' "$SCHEDULE" "$S3_BUCKET" "$BACKUP_DIR" "$my_name" | tee -a /var/spool/cron/datarobot
+                  printf '%s docker stop $(docker ps -aq) && /usr/local/bin/aws s3 sync --no-progress /opt/datarobot/data s3://%s/%s/data/%s && docker start $(docker ps -aq)\n' "$SCHEDULE" "$S3_BUCKET" "$BACKUP_DIR" "$my_name" | tee -a /var/spool/cron/datarobot
                 fi              
               test: "test ${USE_S3_BACKUPS} = 'true'"
               ignoreErrors: "false"
