--- a/templates/datarobot-new-vpc-entry.template.yaml
+++ b/templates/datarobot-new-vpc-entry.template.yaml
@@ -1,6 +1,9 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Deploy DataRobot into a new VPC (qs-1s36qjm45).
 Metadata:
+  QuickStartDocumentation:
+    EntrypointName: "Launch into a new VPC"
+    Order: "1"
   QSLint:
     Exclusions: [ W9002, W9003, W9006 ]
   cfn-lint:
