--- a/templates/datarobot-existing-vpc.template.yaml
+++ b/templates/datarobot-existing-vpc.template.yaml
@@ -47,7 +47,7 @@ Metadata:
       DRHTTPSetting:
         default: HTTP security settings 
       DRZone:
-        Default: 'Your domain name (required for HTTPS)'
+        Default: Your domain name (required for HTTPS)
       DRAppName:
         default: Domain name for end-user application server (required for HTTPS) 
       DRPredName:
