--- a/templates/datarobot-existing-vpc.template.yaml
+++ b/templates/datarobot-existing-vpc.template.yaml
@@ -81,19 +81,19 @@ Metadata:
 Parameters:
   PublicSubnet1ID:
     Type: "AWS::EC2::Subnet::Id"
-    Description: ID of the public subnet in Availability Zone 1 of your existing VPC (e.g., subnet-a0246dcd).
+    Description: ID of the public subnet in Availability Zone 1 of your existing VPC (for example, subnet-a0246dcd).
   PublicSubnet2ID:
     Type: "AWS::EC2::Subnet::Id"
-    Description: ID of the public subnet in Availability Zone 2 of your existing VPC (e.g., subnet-b1236eea).
+    Description: ID of the public subnet in Availability Zone 2 of your existing VPC (for example, subnet-b1236eea).
   PrivateSubnet1ID:
     Type: "AWS::EC2::Subnet::Id"
-    Description: ID of the private subnet in Availability Zone 1 of your existing VPC (e.g., subnet-fe9a8b32).
+    Description: ID of the private subnet in Availability Zone 1 of your existing VPC (for example, subnet-fe9a8b32).
   PrivateSubnet2ID:
     Type: "AWS::EC2::Subnet::Id"
-    Description: ID of the private subnet in Availability Zone 2 of your existing VPC (e.g., subnet-be8b01ea).
+    Description: ID of the private subnet in Availability Zone 2 of your existing VPC (for example, subnet-be8b01ea).
   VPCID:
     Type: "AWS::EC2::VPC::Id"
-    Description: ID of your existing VPC (e.g., vpc-0343606e).
+    Description: ID of your existing VPC (for example, vpc-0343606e).
   VPCCIDR:
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
     ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28.
