--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -6,11 +6,11 @@ project:
   regions:
     - ap-northeast-1
     - ap-northeast-2
-    - ap-south-1
-    - ap-southeast-1
-    - ap-southeast-2
-    - eu-central-1
-    - eu-north-1
+#     - ap-south-1
+#     - ap-southeast-1
+#     - ap-southeast-2
+#     - eu-central-1
+#     - eu-north-1
     - eu-west-2
     - eu-west-3
     - sa-east-1
@@ -18,7 +18,7 @@ project:
     - us-east-2
     - us-west-1
     - us-west-2
-    - ca-central-1
+#     - ca-central-1
 tests:
   default:
    template: ./templates/datarobot-new-vpc-entry.template.yaml
